<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/itemIsProvisioning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#a0a0a0a0"
        tools:text="@string/provisioning_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ICCID"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemIccid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="89860317422046236431" />

        <TextView
            android:id="@+id/itemEnableBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/enable_state"
            android:paddingLeft="7dp"
            android:paddingTop="2dp"
            android:paddingRight="7dp"
            android:paddingBottom="2dp"
            android:text="@string/enable_profile"
            android:textColor="@drawable/enable_text_bg" />

    </LinearLayout>

</LinearLayout>
